🚧 Set margin to global footer to prevent it from being overlapped by order-cta

--- a/styles/layouts/_global-foot.scss
+++ b/styles/layouts/_global-foot.scss
@@ -2,6 +2,7 @@
   padding-top: 32px;
   padding-bottom: 40px;
   background-color: $background;
+  margin-bottom: $order-cta-height;
 
   &-title {
     @include text-style(13, $dark);
@@ -41,6 +42,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
